--- a/task23/index.html
+++ b/task23/index.html
@@ -5,14 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./animation.css">
     <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
-    <div class="container">
-        <div><img class="img1" src="https://css-task-15.netlify.app/img/naruto-uzumaki-1-285x399.webp" alt="">
-
+    <div class="box">
+        <div class="image"><img class="img1" src="https://css-task-15.netlify.app/img/naruto-uzumaki-1-285x399.webp" alt="" >
             <img class="img2" src="https://css-task-15.netlify.app/img/naruto-uzumaki-1-285x399.webp" alt="">
+            <div class="mini-box "></div>
+            <div class="mini-box-2 "></div>
+
+            
 
         </div>
 
