--- a/my project/index.html
+++ b/my project/index.html
@@ -4,41 +4,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Be Strong</title>
+    <link href="https://fonts.googleapis.com/css2?family=Charmonman:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="./dumbbell-solid.svg" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="stylesheet" href="animation.css">
     <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
 
-    <main>
+    <section class="main-section">
+
         <div class="navbar">
             <ul class="first-ul">
                 <li><a class="main-a" href="">Home</a></li>
                 <li class="product-menu"> <a class="main-a products" href="">Products</a>
-                    <ul class="list">
-                        <li><a class="list-a" href="">Whey Gold</a></li>
-                        <li><a class="list-a" href="">Max Whey</a></li>
-                        <li><a class="list-a" href="">Iso-Flex</a></li>
-                        <li><a class="list-a" href="">Max-Muscle</a></li>
-                        <li><a class="list-a" href="">Combat-Fuel</a></li>
-                    </ul>
+
+                    <div class="list-menu">
+                        <ul class="list">
+                            <li><a class="list-a" href="">Whey Gold</a></li>
+                            <li><a class="list-a" href="">Max Whey</a></li>
+                            <li><a class="list-a" href="">Iso-Flex</a></li>
+                            <li><a class="list-a" href="">Max-Muscle</a></li>
+                            <li><a class="list-a" href="">Combat-Fuel</a></li>
+                        </ul>
+                    </div>
+
                 </li>
                 <li><a class="main-a" href="">Catalogs</a></li>
                 <li><a class="main-a" href="">About</a></li>
                 <li><a class="main-a" href="">Contact</a></li>
             </ul>
 
-
-
-
-
-
-
+            <div class="icons">
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-square-instagram"></i>
+                <i class="fa-brands fa-youtube"></i>
+                <i class="fa-brands fa-x-twitter"></i>
+            </div>
         </div>
 
 
 
-    </main>
+
+
+
+    </section>
+
+    <section class="page-2">
+
+        <div class="page2-header">
+            <h1 data-text="Build Your Muscles with Natural Products And  Do Your Best In The Gym Hall !">Build Your Muscles with Natural Products And Do Your Best In The Gym Hall !</h1>
+        </div>
+
+    </section>
 
 </body>
 
