--- a/task24/index.html
+++ b/task24/index.html
@@ -15,15 +15,28 @@
     </div>
     <div class="grid-container">
 
-        <div class="grid-item grid-item-1"><img src="https://css-task-16.netlify.app/row-1-column-1.webp" alt=""></div>
-        <div class="grid-item grid-item-2"><img src="https://css-task-16.netlify.app/row-1-column-2.webp" alt=""></div>
-        <div class="grid-item grid-item-3"><img src="https://css-task-16.netlify.app/row-1-column-3.webp" alt=""></div>
-        <div class="grid-item grid-item-4"><img src="https://css-task-16.netlify.app/row-2-column-1.webp" alt=""></div>
-        <div class="grid-item grid-item-5"><img src="https://css-task-16.netlify.app/row-2-column-2.webp" alt=""></div>
-        <div class="grid-item grid-item-6"><img src="https://css-task-16.netlify.app/row-2-column-3.webp" alt=""></div>
-        <div class="grid-item grid-item-7"><img src="https://css-task-16.netlify.app/row-3-column-1.webp" alt=""></div>
-        <div class="grid-item grid-item-8"><img src="https://css-task-16.netlify.app/row-3-column-2.webp" alt=""></div>
-        <div class="grid-item grid-item-9"><img src="https://css-task-16.netlify.app/row-3-column-3.webp" alt=""></div>
+        <div class="container">
+            <div class="grid-item grid-item-1"><img src="https://css-task-16.netlify.app/row-1-column-1.webp" alt="">
+            </div>
+            <div class="grid-item grid-item-2"><img src="https://css-task-16.netlify.app/row-1-column-2.webp" alt="">
+            </div>
+            <div class="grid-item grid-item-3"><img src="https://css-task-16.netlify.app/row-1-column-3.webp" alt="">
+            </div>
+            <div class="grid-item grid-item-4"><img src="https://css-task-16.netlify.app/row-2-column-1.webp" alt="">
+            </div>
+            <div class="grid-item grid-item-5"><img src="https://css-task-16.netlify.app/row-2-column-2.webp" alt="">
+            </div>
+            <div class="grid-item grid-item-6"><img src="https://css-task-16.netlify.app/row-2-column-3.webp" alt="">
+            </div>
+            <div class="grid-item grid-item-7"><img src="https://css-task-16.netlify.app/row-3-column-1.webp" alt="">
+            </div>
+            <div class="grid-item grid-item-8"><img src="https://css-task-16.netlify.app/row-3-column-2.webp" alt="">
+            </div>
+            <div class="grid-item grid-item-9"><img src="https://css-task-16.netlify.app/row-3-column-3.webp" alt="">
+            </div>
+        </div>
+
+
     </div>
 </body>
 
