java added file

--- a/task25/index.html
+++ b/task25/index.html
@@ -14,30 +14,30 @@
 </head>
 
 <body>
-
+<div class="container media"></div>
     <div class="header">
         <h5 class="header-text">Our Works</h5>
         <h1>Latest Projects</h1>
     </div>
 
-    <div class="">
-        <ul class="project-meniu">
-            <li><a href="#" class="menu-list-to" data-title="ALL"><span data-title="ALL">ALL</span></a></li>
-            <li><a href="#" class="menu-list-to" data-title="MOBILE APPS"><span data-title="MOBILE APPS">MOBILE
+    <div class="menu-container media" >
+        <ul class="project-meniu media ">
+            <li><a href="#" class="menu-list-to media" data-title="ALL"><span data-title="ALL">ALL</span></a></li>
+            <li><a href="#" class="menu-list-to media" data-title="MOBILE APPS"><span data-title="MOBILE APPS">MOBILE
                         APPS</span></a></li>
-            <li><a href="#" class="menu-list-to" data-title="CUSTOM SOFTWARE"><span data-title="CUSTOM SOFTWARE">CUSTOM
+            <li><a href="#" class="menu-list-to media" data-title="CUSTOM SOFTWARE"><span data-title="CUSTOM SOFTWARE">CUSTOM
                         SOFTWARE</span></a></li>
-            <li><a href="#" class="menu-list-to" data-title="QA & TESTING"><span data-title="QA & TESTING">QA &
+            <li><a href="#" class="menu-list-to media" data-title="QA & TESTING"><span data-title="QA & TESTING">QA &
                         TESTING</span></a></li>
-            <li><a href="#" class="menu-list-to" data-title="UX AND DESIGN"><span data-title="UX AND DESIGN">UX AND
+            <li><a href="#" class="menu-list-to media" data-title="UX AND DESIGN"><span data-title="UX AND DESIGN">UX AND
                         DESIGN</span></a></li>
         </ul>
     </div>
 
-    <div class="card-container">
+    <div class="card-container media">
 
-        <div class="main-card">
-            <div class="card card-1 col-4 ">
+        <div class="main-card media">
+            <div class="card card-1 col-4 media">
                 <div class="front"><img class="img1 col-12"
                         src="https://muradorucov.github.io/PathSoftTemplateClone/img/1.jpg" alt=""></div>
                 <div class="back">
@@ -56,8 +56,8 @@
             </div>
         </div>
 
-        <div class="main-card-2">
-            <div class="card card-2 col-4 ">
+        <div class="main-card-2 media">
+            <div class="card card-2 col-4 media">
                 <div class="front"><img class="img1 col-12"
                         src="https://muradorucov.github.io/PathSoftTemplateClone/img/2.jpg" alt=""></div>
                 <div class="back">
@@ -76,8 +76,8 @@
             </div>
         </div>
 
-        <div class="main-card-3">
-            <div class="card card-3 col-4 ">
+        <div class="main-card-3 media">
+            <div class="card card-3 col-4 media">
                 <div class="front"><img class="img1 col-12"
                         src="https://muradorucov.github.io/PathSoftTemplateClone/img/3.jpg" alt=""></div>
                 <div class="back">
